include/cortext/capi.h

  /// @brief Opaque handle to a Cortext instance.
  ///
  /// This handle must be freed with cortext_free() when no longer needed.
  typedef void *cortext_handle;
  /// @brief Binding-friendly configuration for cortext_create_with_config.
  typedef struct cortext_config
  {
    size_t struct_size;
    double focus;
    double sensitivity;
    double stability;
    int affect_interrupt;
    int affect_retrieval;
    int reinforcement_enabled;
    int procedural_enabled;
    int sequential_edges_enabled;
    int signal_filter_audio_enabled;
    int signal_filter_image_enabled;
    int signal_filter_text_enabled;
  } cortext_config;
  /// @brief Creates a Cortext instance with default models directory.
  /// @param focus Focus knob value in [0.0, 1.0].
  /// @param sensitivity Sensitivity knob value in [0.0, 1.0].
  /// @param stability Stability knob value in [0.0, 1.0].
  /// @param db_path Path to SQLite database file (e.g., "memory.db" or ":memory:").
  /// @return Handle to the created instance, or NULL on failure.
  ///
  /// The returned handle must be freed with cortext_free().
  /// Default models directory is "models".
  CORTEXT_EXPORT cortext_handle cortext_create (double focus, double sensitivity,
                                                double stability,
                                                const char *db_path);
  /// @brief Initializes a cortext_config struct with the library defaults.
  CORTEXT_EXPORT void cortext_config_init (cortext_config *cfg);
  /// @brief Creates a Cortext instance from a binding-friendly config struct.
  /// @param cfg Optional configuration. NULL uses the library defaults.
  /// @param db_path Path to SQLite database file.
  /// @param models_dir Optional path to model assets. NULL uses the default
  ///   model root.
  CORTEXT_EXPORT cortext_handle
  cortext_create_with_config (const cortext_config *cfg, const char *db_path,
                              const char *models_dir);
  /// @brief Creates a Cortext instance with custom models directory.
  /// @param focus Focus knob value in [0.0, 1.0].
  /// @param sensitivity Sensitivity knob value in [0.0, 1.0].
  /// @param stability Stability knob value in [0.0, 1.0].
  /// @param db_path Path to SQLite database file (e.g., "memory.db" or ":memory:").
  /// @param models_dir Path to the local model root directory.
  /// @return Handle to the created instance, or NULL on failure.
  ///
  /// The returned handle must be freed with cortext_free().
  CORTEXT_EXPORT cortext_handle
  cortext_create_with_models (double focus, double sensitivity, double stability,
                              const char *db_path, const char *models_dir);
  /// @brief Frees a Cortext instance and releases all resources.
  /// @param h Handle to the instance to free. Safe to pass NULL.
  ///
  /// After calling this function, the handle is invalid and must not be used.
  CORTEXT_EXPORT void cortext_free (cortext_handle h);
  /// @brief Processes text input through the memory system.
  /// @param h Handle to a Cortext instance.
  /// @param text Input text string (must be non-NULL).
  /// @param source_id Opaque source stream identifier for provenance and exact
  /// same-source grouping (must be non-NULL).
  /// @return 0 on success, 1 if invalid parameters, 2 on internal error.
  ///
  /// This function encodes the text and processes it through the signal
  /// pipeline. Timestamps are generated internally in milliseconds.
  /// Any retrieved memories are buffered until cortext_flush().
  CORTEXT_EXPORT int cortext_process_text (cortext_handle h, const char *text,
                                           const char *source_id);
  /// @brief Processes audio input through the memory system.
  /// @param h Handle to a Cortext instance.
  /// @param pcm PCM audio samples (float32, must be non-NULL).
  /// @param num_samples Number of PCM samples.
  /// @param source_id Opaque source stream identifier for provenance and exact
  /// same-source grouping (must be non-NULL).
  /// @return 0 on success, 1 if invalid parameters, 2 on internal error.
  ///
  /// Audio must be 16kHz mono float32 PCM. Timestamps are generated internally.
  /// Any retrieved memories are buffered until cortext_flush().
  CORTEXT_EXPORT int cortext_process_audio (cortext_handle h, const float *pcm,
                                            size_t num_samples,
                                            const char *source_id);
  /// @brief Processes image input through the memory system.
  /// @param h Handle to a Cortext instance.
  /// @param data Raw image data (RGB or RGBA, must be non-NULL).
  /// @param width Image width in pixels.
  /// @param height Image height in pixels.
  /// @param channels Number of channels (3 for RGB, 4 for RGBA).
  /// @param source_id Opaque source stream identifier for provenance and exact
  /// same-source grouping (must be non-NULL).
  /// @return 0 on success, 1 if invalid parameters, 2 on internal error.
  ///
  /// Image data is expected in row-major order (height × width × channels).
  /// Timestamps are generated internally. Any retrieved memories are
  /// buffered until cortext_flush().
  CORTEXT_EXPORT int cortext_process_image (cortext_handle h,
                                            const uint8_t *data, int width,
                                            int height, int channels,
                                            const char *source_id);
  /// @brief Runs one explicit shallow consolidation pass.
  /// @param h Handle to a Cortext instance.
  /// @return 0 on success, 1 if invalid handle, 2 on internal error.
  ///
  /// This replays stored embeddings through the v1 graph/label consolidation
  /// path. Changes are buffered until cortext_flush().
  CORTEXT_EXPORT int cortext_consolidate (cortext_handle h);
  /// @brief Commits all buffered database writes.
  /// @param h Handle to a Cortext instance.
  /// @return 0 on success, 1 if invalid handle, 2 on internal error.
  ///
  /// This commits the current episode transaction and starts a new episode.
  /// Call after processing a batch of signals or before querying results.
  CORTEXT_EXPORT int cortext_flush (cortext_handle h);
  /// @brief Resets volatile in-memory processor state.
  /// @param h Handle to a Cortext instance.
  /// @return 0 on success, 1 if invalid handle, 2 on internal error.
  ///
  /// Durable memories, signals, embeddings, and object-store content are
  /// retained. The handle remains valid and reloads persisted adaptive state
  /// from the same backing store.
  CORTEXT_EXPORT int cortext_reset (cortext_handle h);
  /// @brief Returns the Cortext library version string.
  CORTEXT_EXPORT const char *cortext_version (void);
  /// @brief Returns the last error produced by this thread's C API calls.
  CORTEXT_EXPORT const char *cortext_last_error (void);