bindings/dart/lib/src/cortext_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Generated bindings for the Cortext C API.
class CortextBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  CortextBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  CortextBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// @brief Creates a Cortext instance with default models directory.
  /// @param focus Focus knob value in [0.0, 1.0].
  /// @param sensitivity Sensitivity knob value in [0.0, 1.0].
  /// @param stability Stability knob value in [0.0, 1.0].
  /// @param db_path Path to SQLite database file (e.g., "memory.db" or ":memory:").
  /// @return Handle to the created instance, or NULL on failure.
  ///
  /// The returned handle must be freed with cortext_free().
  /// Default models directory is "models".
  cortext_handle cortext_create(
    double focus,
    double sensitivity,
    double stability,
    ffi.Pointer<ffi.Char> db_path,
  ) {
    return _cortext_create(focus, sensitivity, stability, db_path);
  }

  late final _cortext_createPtr =
      _lookup<
        ffi.NativeFunction<
          cortext_handle Function(
            ffi.Double,
            ffi.Double,
            ffi.Double,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('cortext_create');
  late final _cortext_create = _cortext_createPtr
      .asFunction<
        cortext_handle Function(double, double, double, ffi.Pointer<ffi.Char>)
      >();

  /// @brief Initializes a cortext_config struct with the library defaults.
  void cortext_config_init(ffi.Pointer<cortext_config> cfg) {
    return _cortext_config_init(cfg);
  }

  late final _cortext_config_initPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cortext_config>)>
      >('cortext_config_init');
  late final _cortext_config_init = _cortext_config_initPtr
      .asFunction<void Function(ffi.Pointer<cortext_config>)>();

  /// @brief Creates a Cortext instance from a binding-friendly config struct.
  /// @param cfg Optional configuration. NULL uses the library defaults.
  /// @param db_path Path to SQLite database file.
  /// @param models_dir Optional path to model assets. NULL uses the default.
  cortext_handle cortext_create_with_config(
    ffi.Pointer<cortext_config> cfg,
    ffi.Pointer<ffi.Char> db_path,
    ffi.Pointer<ffi.Char> models_dir,
  ) {
    return _cortext_create_with_config(cfg, db_path, models_dir);
  }

  late final _cortext_create_with_configPtr =
      _lookup<
        ffi.NativeFunction<
          cortext_handle Function(
            ffi.Pointer<cortext_config>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('cortext_create_with_config');
  late final _cortext_create_with_config = _cortext_create_with_configPtr
      .asFunction<
        cortext_handle Function(
          ffi.Pointer<cortext_config>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// @brief Creates a Cortext instance with custom models directory.
  /// @param focus Focus knob value in [0.0, 1.0].
  /// @param sensitivity Sensitivity knob value in [0.0, 1.0].
  /// @param stability Stability knob value in [0.0, 1.0].
  /// @param db_path Path to SQLite database file (e.g., "memory.db" or ":memory:").
  /// @param models_dir Path to directory containing Cortext model assets.
  /// @return Handle to the created instance, or NULL on failure.
  ///
  /// The returned handle must be freed with cortext_free().
  cortext_handle cortext_create_with_models(
    double focus,
    double sensitivity,
    double stability,
    ffi.Pointer<ffi.Char> db_path,
    ffi.Pointer<ffi.Char> models_dir,
  ) {
    return _cortext_create_with_models(
      focus,
      sensitivity,
      stability,
      db_path,
      models_dir,
    );
  }

  late final _cortext_create_with_modelsPtr =
      _lookup<
        ffi.NativeFunction<
          cortext_handle Function(
            ffi.Double,
            ffi.Double,
            ffi.Double,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('cortext_create_with_models');
  late final _cortext_create_with_models = _cortext_create_with_modelsPtr
      .asFunction<
        cortext_handle Function(
          double,
          double,
          double,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// @brief Frees a Cortext instance and releases all resources.
  /// @param h Handle to the instance to free. Safe to pass NULL.
  ///
  /// After calling this function, the handle is invalid and must not be used.
  void cortext_free(cortext_handle h) {
    return _cortext_free(h);
  }

  late final _cortext_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(cortext_handle)>>(
        'cortext_free',
      );
  late final _cortext_free = _cortext_freePtr
      .asFunction<void Function(cortext_handle)>();

  /// @brief Processes text input through the memory system.
  /// @param h Handle to a Cortext instance.
  /// @param text Input text string (must be non-NULL).
  /// @param source_id Source identifier string (must be non-NULL).
  /// @return 0 on success, 1 if invalid parameters, 2 on internal error.
  ///
  /// This function encodes the text and processes it through the signal
  /// pipeline. Timestamps are generated internally in milliseconds.
  /// Any retrieved memories are buffered until cortext_flush().
  int cortext_process_text(
    cortext_handle h,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Char> source_id,
  ) {
    return _cortext_process_text(h, text, source_id);
  }

  late final _cortext_process_textPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            cortext_handle,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('cortext_process_text');
  late final _cortext_process_text = _cortext_process_textPtr
      .asFunction<
        int Function(
          cortext_handle,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// @brief Processes audio input through the memory system.
  /// @param h Handle to a Cortext instance.
  /// @param pcm PCM audio samples (float32, must be non-NULL).
  /// @param num_samples Number of PCM samples.
  /// @param source_id Source identifier string (must be non-NULL).
  /// @return 0 on success, 1 if invalid parameters, 2 on internal error.
  ///
  /// Audio must be 16kHz mono float32 PCM. Timestamps are generated internally.
  /// Any retrieved memories are buffered until cortext_flush().
  int cortext_process_audio(
    cortext_handle h,
    ffi.Pointer<ffi.Float> pcm,
    int num_samples,
    ffi.Pointer<ffi.Char> source_id,
  ) {
    return _cortext_process_audio(h, pcm, num_samples, source_id);
  }

  late final _cortext_process_audioPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            cortext_handle,
            ffi.Pointer<ffi.Float>,
            ffi.Size,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('cortext_process_audio');
  late final _cortext_process_audio = _cortext_process_audioPtr
      .asFunction<
        int Function(
          cortext_handle,
          ffi.Pointer<ffi.Float>,
          int,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// @brief Processes image input through the memory system.
  /// @param h Handle to a Cortext instance.
  /// @param data Raw image data (RGB or RGBA, must be non-NULL).
  /// @param width Image width in pixels.
  /// @param height Image height in pixels.
  /// @param channels Number of channels (3 for RGB, 4 for RGBA).
  /// @param source_id Source identifier string (must be non-NULL).
  /// @return 0 on success, 1 if invalid parameters, 2 on internal error.
  ///
  /// Image data is expected in row-major order (height × width × channels).
  /// Timestamps are generated internally. Any retrieved memories are
  /// buffered until cortext_flush().
  int cortext_process_image(
    cortext_handle h,
    ffi.Pointer<ffi.Uint8> data,
    int width,
    int height,
    int channels,
    ffi.Pointer<ffi.Char> source_id,
  ) {
    return _cortext_process_image(h, data, width, height, channels, source_id);
  }

  late final _cortext_process_imagePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            cortext_handle,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('cortext_process_image');
  late final _cortext_process_image = _cortext_process_imagePtr
      .asFunction<
        int Function(
          cortext_handle,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          int,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// @brief Runs one explicit shallow consolidation pass.
  /// @param h Handle to a Cortext instance.
  /// @return 0 on success, 1 if invalid handle, 2 on internal error.
  ///
  /// This replays stored embeddings through the v1 graph/label consolidation
  /// path. Changes are buffered until cortext_flush().
  int cortext_consolidate(cortext_handle h) {
    return _cortext_consolidate(h);
  }

  late final _cortext_consolidatePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(cortext_handle)>>(
        'cortext_consolidate',
      );
  late final _cortext_consolidate = _cortext_consolidatePtr
      .asFunction<int Function(cortext_handle)>();

  /// @brief Commits all buffered database writes.
  /// @param h Handle to a Cortext instance.
  /// @return 0 on success, 1 if invalid handle, 2 on internal error.
  ///
  /// This commits the current episode transaction and starts a new episode.
  /// Call after processing a batch of signals or before querying results.
  int cortext_flush(cortext_handle h) {
    return _cortext_flush(h);
  }

  late final _cortext_flushPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(cortext_handle)>>(
        'cortext_flush',
      );
  late final _cortext_flush = _cortext_flushPtr
      .asFunction<int Function(cortext_handle)>();

  /// @brief Resets volatile in-memory processor state.
  /// @param h Handle to a Cortext instance.
  /// @return 0 on success, 1 if invalid handle, 2 on internal error.
  ///
  /// Durable memories, signals, embeddings, and object-store content are
  /// retained. The handle remains valid and reloads persisted adaptive state
  /// from the same backing store.
  int cortext_reset(cortext_handle h) {
    return _cortext_reset(h);
  }

  late final _cortext_resetPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(cortext_handle)>>(
        'cortext_reset',
      );
  late final _cortext_reset = _cortext_resetPtr
      .asFunction<int Function(cortext_handle)>();

  /// @brief Returns the Cortext library version string.
  ffi.Pointer<ffi.Char> cortext_version() {
    return _cortext_version();
  }

  late final _cortext_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'cortext_version',
      );
  late final _cortext_version = _cortext_versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  /// @brief Returns the last error produced by this thread's C API calls.
  ffi.Pointer<ffi.Char> cortext_last_error() {
    return _cortext_last_error();
  }
